--- a/examples/bar3d.html
+++ b/examples/bar3d.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <script src="../node_modules/vue/dist/vue.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script>
     <script src="../dist/vue-graph.js"></script>
 </head>
 <body>
