--- a/examples/rangebar.html
+++ b/examples/rangebar.html
@@ -19,7 +19,17 @@
     </graph-rangebar>
 </div>
 <script>
-
+var vm = new Vue({
+    el: "#app",
+    data: {
+        names: [ "MS", "Apple", "Google" ],
+        values: [
+            [ [3,25], [25,30], [30,43], [43,48] ],
+            [ [10,20], [20,25], [25,33], [33,45] ],
+            [ [5,35], [35,38], [38,40], [40,48] ]
+        ]
+    }
+});
 </script>
 </body>
 </html>
