--- a/bundles/index.html
+++ b/bundles/index.html
@@ -6,18 +6,24 @@
 <body>
 
 <div id="app">
-    <graph-comparison-area
-            :width="600"
-            :height="400"
-            :labels="labels"
-            :values="values"
-            :shape="'step'"
-            :axis-step="5"
-            :axis-min="[ 0, 0 ]"
-            :axis-max="[ 100, 20 ]">
-        <note :text="title"></note>
-        <legends :names="names"></legends>
-    </graph-comparison-area>
+    <section class="container">
+        Select your dataset:
+
+        <select v-model="dataset">
+            <option value="set1">Set 1</option>
+            <option value="set2">Set 2</option>
+        </select>
+
+        <graph-pie
+                :width="600"
+                :height="350"
+                :padding-bottom="100"
+                :values="items[dataset].values"
+                :names="items[dataset].names">
+            <legends :names="items[dataset].names"></legends>
+            <tooltip :names="items[dataset].names"></tooltip>
+        </graph-pie>
+    </section>
 </div>
 
 </body>
