--- a/bundles/index.html
+++ b/bundles/index.html
@@ -14,6 +14,7 @@
             :padding-left="0"
             :padding-right="0"
             :values="values"
+            :colors="colors"
             :render-interval="0">
     </graph-activebubble>
 </div>
