--- a/bundles/index.html
+++ b/bundles/index.html
@@ -6,9 +6,9 @@
 <body>
 
 <div id="app">
-    <graph-activebubble
-            :width="1000"
-            :height="70"
+    <graph-bubblecloud
+            :width="500"
+            :height="500"
             :padding-top="5"
             :padding-bottom="0"
             :padding-left="0"
@@ -16,7 +16,7 @@
             :values="values"
             :colors="colors"
             :render-interval="0">
-    </graph-activebubble>
+    </graph-bubblecloud>
 </div>
 
 </body>
