--- a/bundles/index.html
+++ b/bundles/index.html
@@ -15,6 +15,7 @@
             :values="values"
             :active-index="active"
             :text-rotate-x="20"
+            :format="baseFormat"
             @legends#filter="onFilter">
         <legends :names="names" :filter="true"></legends>
         <tooltip :names="names" :position="'right'"></tooltip>
