--- a/examples/bar.html
+++ b/examples/bar.html
@@ -10,6 +10,8 @@
             :height="400"
             :axis-min="0"
             :axis-max="50"
+            :focus-start="1"
+            :focus-end="1"
             :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
             :values="values">
         <note :text="'Bar Chart'"></note>
