--- a/examples/line.html
+++ b/examples/line.html
@@ -12,6 +12,8 @@
             :axis-min="0"
             :axis-max="50"
             :axis-full-mode="true"
+            :focus-start="1"
+            :focus-end="2"
             :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
             :names="names"
             :values="values">
