focus Related options, Register with the monitor.

--- a/bundles/index.html
+++ b/bundles/index.html
@@ -9,8 +9,8 @@
     <graph-bar
             :width="600"
             :height="400"
-            :focus-start="1"
-            :focus-end="1"
+            :focus-start="focus"
+            :focus-end="focus"
             :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
             :values="values">
         <note :text="'Bar Chart'"></note>
