--- a/bundles/index.html
+++ b/bundles/index.html
@@ -6,16 +6,19 @@
 <body>
 
 <div id="app">
-    <graph-bar
+    <graph-area
             :width="600"
             :height="400"
-            :labels="[ '1Q', ' ', '3Q', ' ' ]"
+            :labels="[ '1Q', '2Q', '3Q', '4Q' ]"
             :axis-x-style="'none'"
-            :values="values">
-        <note :text="'Bar Chart'"></note>
+            :display="'max'"
+            :values="values"
+            :axis-full-mode="true"
+    >
+        <note :text="'Area Chart'"></note>
         <tooltip :names="names" :position="'left'"></tooltip>
         <legends :names="names" :filter="true"></legends>
-    </graph-bar>
+    </graph-area>
 </div>
 
 </body>
