--- a/examples/line.html
+++ b/examples/line.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script>
-    <script src="../dist/vue-graph.js"></script>
+    <script src="https://cdn.rawgit.com/juijs/vue-graph/2216ae2f/dist/vue-graph.js"></script>
 </head>
 <body>
 <div id="app">
